# Sentiment-Analyzer

./: .gitignore  CMakeLists.txt  analyzer.cpp  analyzer.hpp  bayes.cpp  bayes.hpp  catch.cpp  dev-test-data-mini.csv  dev-test-target-mini.csv  dev-train-data-mini.csv  dev-train-target-mini.csv  main.cpp  porter.c  strand.cpp  strand.hpp  tweet.cpp  tweet.hpp
.github/workflows/: build.yaml
